--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "themes/hugo-embed-pdf-shortcode"]
 	path = themes/hugo-embed-pdf-shortcode
 	url = https://github.com/anvithks/hugo-embed-pdf-shortcode.git
+[submodule "themes/mr-p-hello-friend-ng"]
+	path = themes/mr-p-hello-friend-ng
+	url = https://github.com/mr-pointing/mr-p-hello-friend-ng
